fixed cropping

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ body {
   /*flex: 1;*/
   width: 100%;
   height: 100%;
-  position: fixed;
+  /*position: fixed;*/
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
